19990801-21:58 GMT+1 Bruno Cantero <bruno@issnet.net>
   * source/rdd/dbcmd.c
     Fixed a GPF with MSVC, thaks Paul

19990801-21:40 GMT+1 Victor Szel <info@szelvesz.hu>
   ! source/compiler/harbour.y
     source/hbpp/hbpplib.c
     source/odbc/odbc.c
     source/rtl/dates.c
     source/rtl/dir.c
     source/tools/dates2.c
     include/rddapi.h (some are still left)
     Changed all // style comments to /**/

19990801-20:40 GMT+1 Bruno Cantero <bruno@issnet.net>
   * source/rdd/rddsys.prg
     source/rdd/dbf0.prg
     source/rdd/sdf0.prg
     source/rdd/delim0.prg
     source/rdd/dbfntx/dbfntx0.prg
     tests/working/testdbf.prg
     Added a message for check if all the RDD's are linked

19990801-20:20 GMT+1 Bruno Cantero <bruno@issnet.net>
   * source/rtl/files.c
     Changed for MSVC
   * tests/working/buildvc.bat
     Added a include path to harbour

19990801-18:14 CET Victor Szel <info@szelvesz.hu>
   ! source/compiler/harbour.y - 
     hb_INITSTATICS() -> HB_INITSTATICS() (case adjusted)
   + source/rdd/nulsys/nulsys.prg - Using ANNOUNCE
   ! source/rtl/mtran.c - Fixed, now 100% Clipper compatible.
     - HARD and SOFT characters swapped.
     - HARD and SOFT characters pairs are changed to only one
       character, like in Clipper.
     - unnecessary include ctype.h removed. 
   ! source/rtl/hardcr.c 
     - unnecessary include ctype.h removed. 
     - "HARD_" -> "SOFT_" #define names corrected.
   + tests/working/mtran.prg - More extensive tests added.
   ! source/rtl/msgxxx.c - Previous changes undone, to make it work in GCC.
   + source/tools/numtxten.prg
     source/tools/Makefile
     NumToTxtEN() - English language number to text conversion added.
     Author: "Michael Mozina" <et@snowcrest.net> Donated to the Public Domain.

199908.01-16:30 GMT+3 Alexander Kresin
  * source/hbpp/hbppint.c
    * Bug fixed ( related to line continuation )
    
199908.01-20:30 WIB Andi Jahja
  * msgxxx.c
    correct directives, it now works
